# Physical-AI-Humanoid-Robotics-Book

./: .eslintrc  .gitignore  404.html  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  search-index-docs-default-current.json  sidebars.js  sitemap.xml  tailwind.config.js  tsconfig.json  vercel.json
.docusaurus/: client-modules.js  (+7 more)
backend/: $null  .env.example  pyproject.toml  requirements.txt
backend/.specify/memory/: constitution.md
backend/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/history/prompts/constitution/: 1-update-rag-chatbot.constitution.prompt.md
backend/history/prompts/rag-chatbot-spec/: 2-rag-chatbot-spec.spec.prompt.md  3-rag-chatbot-plan.plan.prompt.md  4-rag-chatbot-tasks.tasks.prompt.md
backend/specs/001-rag-chatbot-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
backend/specs/001-rag-chatbot-spec/checklists/: requirements.md
backend/specs/001-rag-chatbot-spec/contracts/: api-contract.json
backend/src/: config.py  main.py
backend/src/api/: __init__.py  auth_router.py  chat_router.py  dependencies.py  quiz_router.py  textbook_router.py  user_router.py
backend/src/api/schemas/: __init__.py  auth.py  ingest.py  query.py
backend/src/database/: __init__.py  connection.py  database.py  repository.py  schemas.py  session.py  utils.py
backend/src/models/: __init__.py  book.py  chapter.py  chat_interaction.py  progress.py  query_log.py  quiz.py  recommendation.py  section.py  translation.py  user.py  user_book_access.py
backend/src/services/: __init__.py  chapter_service.py  rag_service.py
backend/src/utils/: __init__.py  auth.py  config.py  embedding_utils.py  error_handler.py  exceptions.py  logging.py
backend/src/vector_store/: qdrant_client.py  vector_operations.py
(+189 files in other folders)
